--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
+
+    compile 'org.litepal.android:core:1.3.2'        //用于对数据库进行操作
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'     //用于进行网络请求
+    compile 'com.google.code.gson:gson:2.7'         //用于解析JSON数据
+    compile 'com.github.bumptech.glide:glide:3.7.0' //用于加载和显示图片
 }
